--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,18 +50,27 @@
 }
 .image1 {
   position: relative;
-  top: -20px;
-  left: 54%;
+  top: 0;
+  left: 0;
 }
 .image2 {
   position: absolute;
-  top: 30px;
-  left: 30px;
-  border-radius: 30px;
+  top: 12px;
+  left: 133px;
 }
-.image3{
-  position: absolute;
-  top: 100%;
-  left: 0px;
-  border-radius: 30px;
+.card
+{
+  border-radius: 2.25rem;
+}
+
+.roundimage
+{ 
+  /* background-image: url("../img/1image.png"); */
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+  margin: 20px;
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
+  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1); 
 }
