--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,23 @@
 }
 .top-headings
 {
-  font-family: "Gothic A1", Sans-serif;
+  font-family: 'DM Sans';
+  color: #3a3391;
+  font-style: normal;
+  font-size: 53px;
   font-weight: 700;
-  line-height: 1.1em;
+  font-size: 53px;
+  line-height: 72px;
+  letter-spacing: -.02em;
+  color: #150f2e;
 }
 .login-button{
   background-color: #2C2C7B;
   margin-right: 6%;
 }
-.navbar-brand{
+.navbar{
 
-  margin-left:6%
+ z-index: 11111111111111;
 }
 .signup-button{
   background-color: #2C2C7B;
@@ -23,7 +29,7 @@
   margin-top: 9%;
 }
 .main-div{
-  background-image: url("../img/background.jpg");
+  /* background-image: url("../img/background.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -34,6 +40,18 @@
 {
   margin-top: 2%;
 }
+
+.fade {
+  margin: 50px;
+  padding: 50px;
+  background-color: lightgreen;
+  opacity: 1;
+}
+
+.collage-image
+{
+  animation: fadeIn 3s ease-in both;
+}
 .grow
 {
   transition: all .2s ease-in-out;
@@ -42,6 +60,10 @@
 { 
   transform: scale(1.1); 
   background-color: #2C2C7B;
+}
+.btn-primary:hover {
+  background-color: #2c2c7d !important;
+  border-color: #2c2c7d !important;
 }
 .parent {
   position: relative;
@@ -73,4 +95,121 @@
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1); 
+}
+
+.btn.btn-transparent-primary:hover
+{
+  color: #ffffff;
+  border-color: transparent;
+}
+
+.btn-transparent-primary {
+  background: rgba(146, 148, 203, 0.15);
+  color: #6b6f7d;
+  border-color: transparent;
+}
+
+
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: rgb(62, 180, 137);
+  position: relative;
+  animation: mymove 5s infinite;
+  position:absolute;
+  animation-delay: 1.8s;
+  bottom:90px;
+}
+
+.col-sm-2>span,
+.col-sm-2>p {
+  display: inline-block;
+}
+.navbar
+{
+    border-bottom:.5px solid rgb(180, 180, 180);
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		transform: translate3d(0, -20%, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+@keyframes mymove {
+  0% {
+    left: 0px;
+  }
+  25%{
+    height:50px;
+    width:50px;
+  }
+  50% {
+    left: 190px;
+     height: 25px;
+  width: 25px;
+  }
+  75%{
+    height:50px;
+    width:50px;
+  }
+  100% {
+    left: 0px;
+  }
+}
+
+.dot2 {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: rgb(62, 180, 137);
+  position: relative;
+  animation: mymove 5s infinite;
+  animation-delay: 0s;
+}
+
+
+.text {
+  font-size: 70px;
+  font-family: "Nunito";
+  font-weight: bolder;
+  display: inline-block;
+}
+
+.clock {
+  position: absolute;
+  top: 25%;
+  left: 28%;
+  color: black;
+  font-size: 30px;
+  font-family: "Source Sans Pro";
+  font-weight: bold;
+  letter-spacing: 5px;
+  max-height: 100%;
+  max-width: 100%;
+  display: inline-block;
+}
+
+h4 {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px !important;
+  line-height: 28px;
+  text-align: center;
+  color: #150f2e;
+}
+.trust-text {
+  font-family: DM Sans;
+  font-style: normal;
 }
