--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -34,19 +34,34 @@
   }
   
   .header {
-    margin-top: 5%;
     width: 100%;
     height: 80px;
-    height: 78vh;
+    height: 90vh;
     justify-content: space-between;
     align-items: center;
     position: relative;
     z-index: 1;
+    background-image: url('../img/Group-96\ \(1\).png') , url('../img/download\ \(1\).png');
+    background-position-x: right ;
   }
-  
+  .heading-trusted {
+    color: #4D4D4D;
+    font-family: "Nunito Sans",Sans-serif;
+    font-size: 26px;
+    font-weight: 800;
+  }
+  .heading-centered {
+    color: #2D2E83;
+    font-family: "Nunito Sans",Sans-serif;
+    font-size: 35px;
+    font-weight: 750;
+    text-transform: capitalize;
+}
+  }
   .left-content {
-    width: 40vw;
+    /* width: 40vw; */
     padding-left: 150px;
+    margin-top: 10%;
   }
   
   .stay-home {
@@ -64,9 +79,13 @@
     text-transform: uppercase;
     color: #3b365e;
   }
-  
+
+
   .para {
-    color: #3b365ecb;
+    color: white;
+    font-weight: 700;
+    font-size: 40px;
+    font-family: revert;
   }
   
   button {
