--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,8 +46,13 @@
   font-family: "Nunito Sans",Sans-serif;
   font-size: 26px;
   font-weight: 800;
+  text-align: initial;
 }
 
+.card-horizontal {
+  display: flex;
+  flex: 1 1 auto;
+}
 .elementor-4239
 {
   color: #000;
